--- a/pages/Evolucion.html
+++ b/pages/Evolucion.html
@@ -13,7 +13,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="logo">ParaleloProg</a>
+			<a href="/index.html" class="logo">ParaleloProg</a>
 
 			<nav>
 				<ul>
@@ -21,19 +21,18 @@
 					<li>
 						<a href="/index.html">Conceptos</a>
 						<ul>
-							<li><a href="/pages/Evolucion.html">Evolucion</a></li>
-							<li><a href="/pages/Arquitectura.html">Arquitecturas</a></li>
-							<li><a href="/pages/Tecnicas.html">Tecnicas</a></li>
-							<li><a href="/pages/Aplicaciones.html">Aplicaciones</a></li>
+							<li><a href="pages/Evolucion.html">Evolucion</a></li>
+							<li><a href="pages/Arquitectura.html">Arquitecturas</a></li>
+							<li><a href="pages/Tecnicas.html">Tecnicas</a></li>
+							<li><a href="pages/Aplicaciones.html">Aplicaciones</a></li>
 						</ul>
 					</li>
-					<li><a href="/pages/Referencias.html">Referencias</a></li>
+					<li><a href="pages/Referencias.html">Referencias</a></li>
 				</ul>
 			</nav>
 
 		</div>
 	</header>
-	<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 	<!-- Banner -->
 	<section id="banner">
