--- a/pages/Tecnicas.html
+++ b/pages/Tecnicas.html
@@ -13,7 +13,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="logo">ParaleloProg</a>
+			<a href="/index.html" class="logo">ParaleloProg</a>
 
 			<nav>
 				<ul>
@@ -21,54 +21,19 @@
 					<li>
 						<a href="/index.html">Conceptos</a>
 						<ul>
-							<li><a href="/pages/Evolucion.html">Evolucion</a></li>
-							<li><a href="/pages/Arquitectura.html">Arquitecturas</a></li>
-							<li><a href="/pages/Tecnicas.html">Tecnicas</a></li>
-							<li><a href="/pages/Aplicaciones.html">Aplicaciones</a></li>
+							<li><a href="pages/Evolucion.html">Evolucion</a></li>
+							<li><a href="pages/Arquitectura.html">Arquitecturas</a></li>
+							<li><a href="pages/Tecnicas.html">Tecnicas</a></li>
+							<li><a href="pages/Aplicaciones.html">Aplicaciones</a></li>
 						</ul>
 					</li>
-					<li><a href="/pages/Referencias.html">Referencias</a></li>
+					<li><a href="pages/Referencias.html">Referencias</a></li>
 				</ul>
 			</nav>
 
-			<!--<nav id="nav">
-						<ul id="MenuDesplegable">
-						<li><a href="index.html">Inicio</a></li>
-						<li><a href="#">Conceptos</a></li>
-						<ul id="MenuDesplegable">
-							<li><a href="index.html">Evolucion</a></li>
-						</ul>
-						<li><a href="#">Referencias</a></li>
-					</ul>
-					</nav>
-					-->
-
-			<!--<nav id="nav">
-				<ul id="MenuDesplegable">
-					<li><a href="index.html">Inicio</a></li>
-					<li>
-						<nav id="nav">
-							<form>
-								<select name="Conceptos" id="Conceptos" onchange="location = this.value">
-									<optgroup label="Conceptos">
-										<option><a href="index.html">Evolucion</a></option>
-										<option
-											value="https://www.forosdelweb.com/f4/select-con-enlaces-otros-html-705902/">
-											Principales Arquitecturas</option>
-										<option value="">Tecnicas</option>
-										<option value="">Aplicaciones</option>
-									</optgroup>
-								</select>
-							</form>
-						</nav>
-					</li>
-					<li><a href="#">Referencias</a></li>
-				</ul>
-			</nav>-->
-
 		</div>
 	</header>
-	<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+	<!--<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>-->
 
 	<!-- Banner -->
 	<section id="banner">
