--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 			<nav>
 				<ul>
-					<li><a href="/index.html">Inicio</a></li>
+					<li><a href="index.html">Inicio</a></li>
 					<li>
-						<a href="/index.html">Conceptos</a>
+						<a href="index.html">Conceptos</a>
 						<ul>
 							<li><a href="/pages/Evolucion.html">Evolucion</a></li>
 							<li><a href="/pages/Arquitectura.html">Arquitecturas</a></li>
@@ -30,41 +30,6 @@
 					<li><a href="/pages/Referencias.html">Referencias</a></li>
 				</ul>
 			</nav>
-
-			<!--<nav id="nav">
-						<ul id="MenuDesplegable">
-						<li><a href="index.html">Inicio</a></li>
-						<li><a href="#">Conceptos</a></li>
-						<ul id="MenuDesplegable">
-							<li><a href="index.html">Evolucion</a></li>
-						</ul>
-						<li><a href="#">Referencias</a></li>
-					</ul>
-					</nav>
-					-->
-
-			<!--<nav id="nav">
-				<ul id="MenuDesplegable">
-					<li><a href="index.html">Inicio</a></li>
-					<li>
-						<nav id="nav">
-							<form>
-								<select name="Conceptos" id="Conceptos" onchange="location = this.value">
-									<optgroup label="Conceptos">
-										<option><a href="index.html">Evolucion</a></option>
-										<option
-											value="https://www.forosdelweb.com/f4/select-con-enlaces-otros-html-705902/">
-											Principales Arquitecturas</option>
-										<option value="">Tecnicas</option>
-										<option value="">Aplicaciones</option>
-									</optgroup>
-								</select>
-							</form>
-						</nav>
-					</li>
-					<li><a href="#">Referencias</a></li>
-				</ul>
-			</nav>-->
 
 		</div>
 	</header>
