--- a/pages/Tecnicas.html
+++ b/pages/Tecnicas.html
@@ -17,7 +17,7 @@
 
 			<nav>
 				<ul>
-					<li><a href="/index.html">Inicio</a></li>
+					<li><a href="../index.html">Inicio</a></li>
 					<li>
 						<a href="/index.html">Conceptos</a>
 						<ul>
