--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 			<nav>
 				<ul>
-					<li><a href="index.html">Inicio</a></li>
+					<li><a href="../ParaleloProg.github.io/index.html">Inicio</a></li>
 					<li>
 						<a href="index.html">Conceptos</a>
 						<ul>
-							<li><a href="/pages/Evolucion.html">Evolucion</a></li>
+							<li><a href="../ParaleloProg.github.io/pages/Evolucion.html">Evolucion</a></li>
 							<li><a href="/pages/Arquitectura.html">Arquitecturas</a></li>
 							<li><a href="/pages/Tecnicas.html">Tecnicas</a></li>
 							<li><a href="/pages/Aplicaciones.html">Aplicaciones</a></li>
