Ajustes a las rutas casi finales

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Introspect by TEMPLATED</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="../ParaleloProg.github.io/assets/css/main.css"/>
 </head>
-
+assets/css/main.css"
 <body>
 
 	<!-- Header -->
@@ -19,15 +19,15 @@
 				<ul>
 					<li><a href="../ParaleloProg.github.io/index.html">Inicio</a></li>
 					<li>
-						<a href="index.html">Conceptos</a>
+						<a href="../ParaleloProg.github.io/index.html">Conceptos</a>
 						<ul>
 							<li><a href="../ParaleloProg.github.io/pages/Evolucion.html">Evolucion</a></li>
-							<li><a href="/pages/Arquitectura.html">Arquitecturas</a></li>
-							<li><a href="/pages/Tecnicas.html">Tecnicas</a></li>
-							<li><a href="/pages/Aplicaciones.html">Aplicaciones</a></li>
+							<li><a href="../ParaleloProg.github.io/pages/Arquitectura.html">Arquitecturas</a></li>
+							<li><a href="../ParaleloProg.github.io/pages/Tecnicas.html">Tecnicas</a></li>
+							<li><a href="../ParaleloProg.github.io/pages/Aplicaciones.html">Aplicaciones</a></li>
 						</ul>
 					</li>
-					<li><a href="/pages/Referencias.html">Referencias</a></li>
+					<li><a href="../ParaleloProg.github.io/pages/Referencias.html">Referencias</a></li>
 				</ul>
 			</nav>
 
