--- a/pages/Evolucion.html
+++ b/pages/Evolucion.html
@@ -5,7 +5,7 @@
 	<title>Introspect by TEMPLATED</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="/assets/css/main.css" />
+	<link rel="stylesheet" href="../../ParaleloProg.github.io/assets/css/main.css" />
 </head>
 
 <body>
@@ -21,13 +21,13 @@
 					<li>
 						<a href="/index.html">Conceptos</a>
 						<ul>
-							<li><a href="pages/Evolucion.html">Evolucion</a></li>
-							<li><a href="pages/Arquitectura.html">Arquitecturas</a></li>
-							<li><a href="pages/Tecnicas.html">Tecnicas</a></li>
-							<li><a href="pages/Aplicaciones.html">Aplicaciones</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Evolucion.html">Evolucion</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Arquitectura.html">Arquitecturas</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Tecnicas.html">Tecnicas</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Aplicaciones.html">Aplicaciones</a></li>
 						</ul>
 					</li>
-					<li><a href="pages/Referencias.html">Referencias</a></li>
+					<li><a href="../../ParaleloProg.github.io/pages/Referencias.html">Referencias</a></li>
 				</ul>
 			</nav>
 
@@ -114,10 +114,10 @@
 	</section>
 
 	<!-- Scripts -->
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/skel.min.js"></script>
-	<script src="/assets/js/util.js"></script>
-	<script src="/assets/js/main.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/jquery.min.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/skel.min.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/util.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/main.js"></script>
 
 </body>
 
