--- a/pages/Evolucion.html
+++ b/pages/Evolucion.html
@@ -5,7 +5,7 @@
 	<title>Introspect by TEMPLATED</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="../../ParaleloProg.github.io/assets/css/main.css" />
+	<link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 
 <body>
