--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="../ParaleloProg.github.io/assets/css/main.css"/>
 </head>
-assets/css/main.css"
+
 <body>
 
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="logo">ParaleloProg</a>
+			<a href="../ParaleloProg.github.io/index.html" class="logo">ParaleloProg</a>
 
 			<nav>
 				<ul>
