--- a/pages/Aplicaciones.html
+++ b/pages/Aplicaciones.html
@@ -5,7 +5,7 @@
 	<title>ParaleloProg</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="/assets/css/main.css" />
+	<link rel="stylesheet" href="../../ParaleloProg.github.io/assets/css/main.css" />
 </head>
 
 <body>
@@ -13,21 +13,21 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="/index.html" class="logo">ParaleloProg</a>
+			<a href="../../ParaleloProg.github.io/index.html" class="logo">ParaleloProg</a>
 
 			<nav>
 				<ul>
-					<li><a href="/index.html">Inicio</a></li>
+					<li><a href="../../ParaleloProg.github.io/index.html">Inicio</a></li>
 					<li>
-						<a href="/index.html">Conceptos</a>
+						<a href="../../ParaleloProg.github.io/index.html">Conceptos</a>
 						<ul>
-							<li><a href="pages/Evolucion.html">Evolucion</a></li>
-							<li><a href="pages/Arquitectura.html">Arquitecturas</a></li>
-							<li><a href="pages/Tecnicas.html">Tecnicas</a></li>
-							<li><a href="pages/Aplicaciones.html">Aplicaciones</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Evolucion.html">Evolucion</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Arquitectura.html">Arquitecturas</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Tecnicas.html">Tecnicas</a></li>
+							<li><a href="../../ParaleloProg.github.io/pages/Aplicaciones.html">Aplicaciones</a></li>
 						</ul>
 					</li>
-					<li><a href="pages/Referencias.html">Referencias</a></li>
+					<li><a href="../../ParaleloProg.github.io/pages/Referencias.html">Referencias</a></li>
 				</ul>
 			</nav>
 
