Ultimos Ajustes Definitivos

--- a/pages/Referencias.html
+++ b/pages/Referencias.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Introspect by TEMPLATED</title>
+	<title>ParaleloProg</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="../../ParaleloProg.github.io/assets/css/main.css" />
@@ -82,10 +82,10 @@
 	</section>
 
 	<!-- Scripts -->
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/skel.min.js"></script>
-	<script src="/assets/js/util.js"></script>
-	<script src="/assets/js/main.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/jquery.min.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/skel.min.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/util.js"></script>
+	<script src="../../ParaleloProg.github.io/assets/js/main.js"></script>
 
 </body>
 
